--- a/jarvican/templates/base.html
+++ b/jarvican/templates/base.html
@@ -16,17 +16,6 @@
     {% endif %}
     {% endblock head %}
     <script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
-    {% if GOOGLE_ANALYTICS_ID -%}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', '{{ GOOGLE_ANALYTICS_ID }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif -%}
   </head>
 
   <body>
@@ -63,5 +52,7 @@
     <script src="/theme/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="/theme/js/vendor/jquery-1.11.0.min.js"></script>
     <script src="/theme/js/jarvican.js"></script>
+    <script data-goatcounter="https://jarv.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
