--- a/jarvican/static/css/main.css
+++ b/jarvican/static/css/main.css
@@ -34,7 +34,7 @@ body {
   color: #333333;
   font-size: 1em;
   background-color: #fdf5e8; }
-  @media all and (max-width: 1024px) {
+  @media only screen and (max-width: 1024px) {
     body {
       width: 100%; } }
 
