--- a/jarvican/templates/base.html
+++ b/jarvican/templates/base.html
@@ -5,8 +5,12 @@
 
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
     <!-- <meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=0, maximum-scale=1, user-scalable=yes"> -->
-    <meta name="viewport" content="width=device-width">
-    <!-- CSS -->
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Random thoughts and notes"/>
     <link rel="stylesheet" href="/theme/css/normalize.min.css">
     <link rel="stylesheet" href="/theme/css/{{ CSS_FILE }}" type="text/css" />
     <link rel="stylesheet" href="/theme/css/pygments.css" type="text/css" />
