--- a/themes/kiera/static/css/styles.css
+++ b/themes/kiera/static/css/styles.css
@@ -1,3 +1,2 @@
-/* @import url(./styles-light.css); */
-@import url(./styles-dark.css);
+@import url(./styles-light.css);
 @import url(./styles-dark.css) (prefers-color-scheme: dark);
