--- a/themes/kiera/static/css/styles-light.css
+++ b/themes/kiera/static/css/styles-light.css
@@ -46,7 +46,10 @@ time {
 }
 
 #container header h1 a {
-  color: #000000;
+  border: 0;
+}
+#container header ul a {
+  border: 0;
 }
 
 #container header ul {
@@ -108,6 +111,11 @@ time {
   margin: 0.5em 0;
   padding-bottom: 0.5em;
 }
+
+#container main section#home ul li h1 {
+  color: red;
+}
+
 
 #container main section#home ul li h2 {
   margin: 0.2em 0;
@@ -263,8 +271,12 @@ width: 100%;
 }
 
 a {
-  color: #666666;
+  color: #0000EE;
   text-decoration: none;
+}
+
+a:visited {
+  color: #551A8B;
 }
 
 .image, figure img, img {
