--- a/themes/kiera/layouts/partials/meta.html
+++ b/themes/kiera/layouts/partials/meta.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="{{ .Site.Params.description | default "jarv" }}" />
+<meta name="description" content="{{ .Site.Params.Description | default "The HTML5 Herald" }}" />
 <meta name="author" content="{{ .Params.Author | default .Site.Author.name }}" />
 {{ with .OutputFormats.Get "rss" -}}
 	{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
