--- a/themes/kiera/layouts/partials/footer.html
+++ b/themes/kiera/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 </main>
-    <footer>
-      <a href="{{.Site.BaseURL}}index.xml">{{ T "subscribe" }} </a></h6>
-    </footer>
+    <!-- <footer> -->
+    <!--   <a href="{{.Site.BaseURL}}index.xml">{{ T "subscribe" }} </a></h6> -->
+    <!-- </footer> -->
 </div>
 
   <script data-goatcounter="https://jarv.goatcounter.com/count"
