--- a/themes/kiera/static/css/styles-dark.css
+++ b/themes/kiera/static/css/styles-dark.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: "Roboto Slab", serif;
+  /* font-family: "Roboto Slab", serif; */
+  font-family: "Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji"
   color: #ffffff;
   background: #2A2829;
 }
@@ -74,7 +75,7 @@ time {
 #container nav {
   border-bottom: solid 3px #cecece;
   padding-bottom: 0.5em;
-  font-family: "Ruda", sans-serif;
+  /* font-family: "Ruda", sans-serif; */
 }
 
 #container nav ul {
@@ -97,6 +98,7 @@ time {
   flex: 1 0 0;
   line-height: 1.5;
   font-size: 1.2rem;
+  color: red;
 }
 
 #container main section#home ul {
@@ -247,7 +249,7 @@ width: 100%;
 
 .meta-aside, #container main section#home ul li aside, #container main article aside {
   margin: 0.5em 0;
-  font-family: "Ruda", sans-serif;
+  /* font-family: "Ruda", sans-serif; */
   color: #909090;
   font-size: 0.8em;
 }
@@ -395,7 +397,7 @@ blockquote {
 
 blockquote::before {
   content: "\f10d";
-  font-family: "Font Awesome 5 Free";
+  /* font-family: "Font Awesome 5 Free"; */
   font-weight: 900;
   font-size: 3em;
   color: rgba(192, 192, 192, 0.3);
