--- a/themes/kiera/static/css/styles.css
+++ b/themes/kiera/static/css/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: "Roboto Slab", serif;
+  font-family: "Ruda", sans-serif;
   color: #ffffff;
   background: #2A2829;
 }
@@ -97,6 +97,7 @@ time {
   flex: 1 0 0;
   line-height: 1.5;
   font-size: 1.2rem;
+  color: rgb(163, 163, 163);
 }
 
 #container main section#home ul {
@@ -189,6 +190,7 @@ time {
 
 #container main h1 {
   margin-bottom: 1rem;
+  color: white;
 }
 
 #container footer {
@@ -264,7 +266,7 @@ width: 100%;
 }
 
 a {
-  color: #fff2aa;
+  color: rgb(20, 184, 166);
   text-decoration: none;
 }
 
