--- a/themes/jarv/layouts/partials/header.html
+++ b/themes/jarv/layouts/partials/header.html
@@ -1,8 +1,8 @@
-<h2><a href="/"><b>{{ .Site.Title | default "example.com" }}</b></a></h2>
-<aside>
+<section id="title">
+  <a href="/"><b>{{ .Site.Title | default "example.com" }}</b></a>
+</section>
+<section id="title-links">
   <ul>
-    <li><a href="/about/">ABOUT</a></li>
-    <li><a href="/contact/">CONTACT</a></li>
-    <li><a href="{{ .Site.BaseURL }}index.xml">RSS</a></li>
+    <li><a href="/about/">ABOUT</a></li><li><a href="/contact/">CONTACT</a></li><li><a href="{{ .Site.BaseURL }}index.xml">RSS</a></li>
   </ul>
-</aside>
+</section>
