--- a/themes/jarv/assets/css/styles.css
+++ b/themes/jarv/assets/css/styles.css
@@ -1,12 +1,12 @@
 
 @font-face {
-  font-family: 'atkinson';
+  font-family: atkinson;
   src: url('/font/AtkinsonHyperlegible-Regular.woff2');
   font-display: block;
 }
 
 @font-face {
-  font-family: 'atkinson';
+  font-family: atkinson;
   src: url('/font/AtkinsonHyperlegible-Bold.woff2');
   font-weight: bold;
   font-display: block;
@@ -14,7 +14,7 @@
 
 
 h1,h2,h3,h4,h5,h6 {
-  margin: 3em 0 1em;
+  margin: 1em 0;
 }
 
 main h1 {
@@ -24,24 +24,17 @@ main h1 {
 
 html {
   max-width: 70ch;
-  padding: 3em 1em;
   margin: auto;
-  line-height: 1.75;
+  line-height: 1.5;
   font-size: 1.25em;
-  color: black;
-  font-family: atkinson, "Open Sans", sans-serif;
-  font-family: "Open Sans", sans-serif;
-  background: #F5F5F0;
-}
-
-p,ul,ol {
-  margin-bottom: 2em;
   color: #1d1d1d;
-  font-family: sans-serif;
+  font-family: atkinson, "Open Sans", sans-serif;
+  background: #f5f5f0;
 }
 
 table {
   border-collapse: collapse;
+  width: 100%;
 }
 
 td, th {
@@ -49,9 +42,13 @@ td, th {
 }
 
 @media only screen and (width <= 800px) {
+  html {
+    padding: 0;
+  }
+
   body > * {
     width: auto;
-    margin: 0 1.2em;
+    margin: 0 .1em;
   }
 }
 
@@ -66,12 +63,6 @@ p {
 
 img {
   width: 100%;
-}
-
-/* index.html */
-
-main {
-  line-height: 1.5;
 }
 
 section#list ul {
@@ -94,28 +85,47 @@ header {
 
 header a {
   text-decoration: none;
+  font-size: 1em;
 }
 
-header h2 {
-  font-size: 14px;
+header section#title {
   width: 50%;
   margin: 0;
   padding: 0;
 }
 
-header aside {
+header section#title-links {
   width: 50%;
   text-align: right;
 }
 
-header aside ul {
+@media only screen and (width <= 800px) {
+  header {
+    flex-direction: column;
+  }
+
+  header section#title {
+    text-align: center;
+    width: 100%;
+  }
+
+  header section#title-links {
+    text-align: center;
+    width: 100%;
+  }
+}
+
+header section#title-links ul {
   margin: 0;
   padding: 0;
   list-style: none;
   justify-content: space-between;
 }
 
-header aside ul > li {
+header section#title-links ul > li {
+  padding-right: 5px;
+  padding-left: 5px;
+  margin: 0;
   display: inline-block;
 }
 
@@ -126,26 +136,32 @@ main article aside {
   margin: 0;
   color: gray;
   font-size: .9em;
+  justify-content: space-between;
 }
 
-main article aside ul li a {
+
+main article aside section#time {
+  width: 50%;
+  text-align: left;
+}
+
+main article aside section#tags {
+  width: 50%;
+  text-align: right;
+}
+
+
+main article aside section#tags ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+main article aside section#tags a {
   color: gray;
   text-decoration: none;
 }
 
-main article aside time {
-  display: flex;
-  width: 50%;
-}
-
-main article aside ul {
-  margin: 0;
-  padding: 0;
-  width: 50%;
-  text-align: right;
-  list-style: none;
-  justify-content: space-between;
-}
 
 main article > pre {
   background-color: #e1e1e1;
@@ -155,7 +171,8 @@ main article > pre {
   box-shadow: 0 -1px 0 #bbb inset;
 }
 
-/* code hylights */
+/* code hilights */
+
 main article .highlight pre {
   overflow-x: auto;
   font-size: .8em;
@@ -175,7 +192,7 @@ main article p code {
 blockquote {
   font-style:italic;
   color: #555;
-  padding:1.2em 30px 1.2em 45px;
+  padding:1.2em 30px 1.2em 3em;
   border-left:8px solid #696969;
   position: relative;
   background: #EDEDED;
@@ -184,11 +201,9 @@ blockquote {
 
 blockquote p {
   text-align: left;
-
 }
 
 blockquote::before {
-  font-family: Arial, Helvetica, sans-serif;
   content: "\201C";
   color: #696969;
   font-size:4em;
@@ -204,6 +219,6 @@ blockquote::after {
 @media only screen and (width <= 800px) {
   blockquote {
     margin: 1em 0;
-    padding: .5em;
+    padding:1.2em 5px 5px 3em;
   }
 }
