--- a/themes/jarv/layouts/partials/aside.html
+++ b/themes/jarv/layouts/partials/aside.html
@@ -1,7 +1,10 @@
 <aside>
+  <section id="time">
   {{ if .Params.showthedate | default true }}
   <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Date.Format "Jan 2, 2006" }}</time>
   {{ end }}
+  </section>
+  <section id="tags">
   <ul>
     <li>
     </li>
@@ -16,4 +19,5 @@
     </li>
     {{ end }}
   </ul>
+  </section>
 </aside>
