--- a/themes/one-post-a-year/layouts/partials/head.html
+++ b/themes/one-post-a-year/layouts/partials/head.html
@@ -6,4 +6,10 @@
 {{ with .OutputFormats.Get "rss" -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
-{{ partial "style.html" . }}
+<style>
+  {{ partial "chromastyles.github.css" . | safeCSS }}
+  @media (prefers-color-scheme: dark) {
+    {{ partial "chromastyles.solarized-dark.css" . | safeCSS }}
+  }
+</style>
+<style>{{ partial "style.css" . | safeCSS }}</style>
