change stat endpoint

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,5 +1,5 @@
-<script data-goatcounter="https://stats.jarv.org/count"
-        async src="//stats.jarv.org/count.js"></script>
+<script data-goatcounter="https://s.jarv.org/c"
+        async src="//s.jarv.org/cjs"></script>
 <noscript>
-    <img src="//stats.jarv.org/count?p=/test-noscript">
+    <img src="//s.jarv.org/c?p=/test-noscript">
 </noscript>
