adds post for go-deadlock

--- a/themes/one-post-a-year/layouts/partials/style.css
+++ b/themes/one-post-a-year/layouts/partials/style.css
@@ -87,6 +87,11 @@ header {
   display: flex;
 }
 
+footer {
+  color: gray;
+  text-align: center;
+  font-size: 1em;
+}
 
 header a {
   text-decoration: none;
