adds like button

--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -1,1 +1,22 @@
 Site built with ♡ using <a href="https://gohugo.io/">Hugo</a> with the <a href="https://github.com/jarv/one-post-per-year">one post per year theme</a>
+<br>
+<div class="like"><button onclick="resetCnt()"><span>👍</span></button> <span id="cnt"></span> since the last like</div>
+
+<script type="text/javascript">
+  function resetCnt() {
+    fetch("//{{ .Site.Params.WSHost }}/reset", {
+      method: "PUT",
+    })
+  }
+  (function() {
+    var cnt = document.getElementById("cnt");
+    var wss = (window.location.protocol == "https:") ? "wss:" : "ws:"
+    var conn = new WebSocket(wss + "//{{ .Site.Params.WSHost }}/ws");
+    conn.onclose = function(evt) {
+        cnt.textContent = '';
+    }
+    conn.onmessage = function(evt) {
+        cnt.textContent = evt.data;
+    }
+  })();
+</script>
