--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -3,70 +3,4 @@
 <noscript>
     <img src="//s.jarv.org/c?p=/test-noscript">
 </noscript>
-
-<style>
-@media only screen and (width <= 800px) {
-  .about > img {
-    width: 100%;
-    text-align: center;
-  }
-
-}
-
-@media only screen and (width > 800px) {
-  .about {
-    display: flex;
-    flex-direction: row;
-  }
-  .about > img {
-    max-width: 200px;
-    max-height: 200px;
-  }
-  .about > .text {
-    padding-left: 1em;
-  }
-}
-
-div.like {
-  font-size: 14px;
-  margin-bottom: 1em;
-}
-
-div.like button {
-  font-family: 'Courier New', monospace;
-  border: 0px solid #333;
-  border-radius: 50%;
-  padding: 5px 10px;
-  color: #333;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: none;
-  font-size: 16px;
-}
-
-div.like button:active {
-  transform: scale(0.96);
-}
-
-div.like button:hover {
-  background-color: #e0e0e0;
-  outline: 1px solid gray;
-}
-
-div.like span {
-  filter: grayscale(100%);
-  color: #888;
-  font-family: 'Courier New', monospace;
-}
-
-@media (prefers-color-scheme: dark) {
-  div.like button {
-    background-color: black;
-  }
-  div.like button:hover {
-    outline: 1px solid DimGray;
-    background-color: #282828;
-  }
-}
-
-</style>
+<style>{{ partial "wscnt.css" . | safeCSS }}</style>
