--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -3,4 +3,4 @@
 <noscript>
     <img src="//s.jarv.org/c?p=/test-noscript">
 </noscript>
-<style>{{ partial "wscnt.css" . | safeCSS }}</style>
+<style>{{ partial "site.css" . | safeCSS }}</style>
