--- a/layouts/partials/site.css
+++ b/layouts/partials/site.css
@@ -59,6 +59,20 @@ div#like span {
   font-family: 'Courier New', monospace;
 }
 
+.no-select {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.no-select:focus {
+  outline: none !important;
+}
+
 @media (prefers-color-scheme: dark) {
   div#like button {
     background-color: black;
