--- a/layouts/partials/site.css
+++ b/layouts/partials/site.css
@@ -7,17 +7,17 @@
 }
 
 @media only screen and (width > 800px) {
-  .about {
+  .contact {
     display: flex;
     flex-direction: row;
   }
 
-  .about > img {
+  .contact > img {
     max-width: 200px;
     max-height: 200px;
   }
 
-  .about > .text {
+  .contact > .text {
     padding-left: 1em;
   }
 }
