--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -1,4 +1,4 @@
-Site built with ♡ using <a href="https://gohugo.io/">Hugo</a> with the <a href="https://github.com/jarv/one-post-per-year">one post per year theme</a>
+Site built with ♡ using <a href="https://gohugo.io/">Hugo</a> with the <a href="https://github.com/jarv/one-post-a-year">one post a year theme</a>
 <noscript>
 <img src="//s.jarv.org/c?p=/test-noscript">
 </noscript>
