Adds playground links to examples

--- a/themes/one-post-a-year/layouts/_default/list.html
+++ b/themes/one-post-a-year/layouts/_default/list.html
@@ -6,7 +6,7 @@
         <h1>{{ .Title }}</h1>
     {{ end }}
     {{ range .Data.Pages }}
-    <ul>
+    <ul class="gradient-list">
       <li>
       <a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a>
       </li>
