--- a/themes/one-post-a-year/layouts/partials/header.html
+++ b/themes/one-post-a-year/layouts/partials/header.html
@@ -4,7 +4,15 @@
   </section>
   <section id="title-links">
     <ul>
-      <li><a href="{{ .Site.BaseURL | default "/" }}contact/">CONTACT</a></li><li><a href="{{ .Site.BaseURL | default "/" }}index.xml">RSS</a></li>
+      <li>
+        <a href="{{ .Site.BaseURL | default "/" }}contact/">CONTACT</a>
+      </li>
+      <li>
+        <a href="{{ .Site.BaseURL | default "/" }}projects/">PROJECTS</a>
+      </li>
+      <li>
+        <a href="{{ .Site.BaseURL | default "/" }}index.xml">RSS</a>
+      </li>
     </ul>
   </section>
 </header>
