adds embed widget

--- a/themes/one-post-a-year/layouts/partials/head.html
+++ b/themes/one-post-a-year/layouts/partials/head.html
@@ -18,4 +18,6 @@
   {{ if templates.Exists "partials/extend-head.html" }}
     {{ partial "extend-head.html" .Site }}
   {{ end }}
+
+  <script src="http://localhost:8760/embed/DEMO?question=false&fade=false"></script>
 </head>
