--- a/themes/one-post-a-year/layouts/partials/head.html
+++ b/themes/one-post-a-year/layouts/partials/head.html
@@ -19,5 +19,5 @@
     {{ partial "extend-head.html" .Site }}
   {{ end }}
 
-  <script src="http://localhost:8760/embed/DEMO?question=false&fade=false"></script>
+  <script src="{{ .Site.Params.smEmbed }}"></script>
 </head>
