--- a/themes/one-post-a-year/layouts/partials/style.css
+++ b/themes/one-post-a-year/layouts/partials/style.css
@@ -22,6 +22,11 @@ main h1 {
   padding-right: 0.25rem;
 }
 
+section h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
 html {
   max-width: 70ch;
   margin: auto;
