--- a/themes/one-post-a-year/layouts/partials/head.html
+++ b/themes/one-post-a-year/layouts/partials/head.html
@@ -1,9 +1,58 @@
 <head>
-  <title>{{ .Site.Title }}</title>
+  <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{ .Site.Params.Description | default "The HTML5 Herald" }}">
+  <meta name="description" content="{{ if .Description }}{{ .Description }}{{ else if .Summary }}{{ .Summary }}{{ else }}{{ .Site.Params.Description }}{{ end }}">
   <meta name="author" content="{{ .Params.Author | default .Site.Author.name }}">
+  
+  <!-- Preload critical fonts -->
+  <link rel="preload" href="{{ .Site.BaseURL | default "/" }}/font/AtkinsonHyperlegible-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ .Site.BaseURL | default "/" }}/font/AtkinsonHyperlegible-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="{{ .Permalink }}">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {{ if .IsHome }}
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "{{ .Site.Title }}",
+    "url": "{{ .Site.BaseURL }}",
+    "description": "{{ .Site.Params.Description }}",
+    "author": {
+      "@type": "Person",
+      "name": "{{ .Site.Author.name | default "Jarv" }}"
+    }
+  }
+  {{ else if .IsPage }}
+  {
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+    "headline": "{{ .Title }}",
+    "url": "{{ .Permalink }}",
+    "datePublished": "{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}",
+    "dateModified": "{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}",
+    "author": {
+      "@type": "Person",
+      "name": "{{ .Params.Author | default .Site.Author.name | default "Jarv" }}"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "{{ .Site.Title }}",
+      "url": "{{ .Site.BaseURL }}"
+    },
+    "description": "{{ if .Description }}{{ .Description }}{{ else if .Summary }}{{ .Summary }}{{ else }}{{ .Site.Params.Description }}{{ end }}",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "{{ .Permalink }}"
+    }{{ if .Params.tags }},
+    "keywords": [{{ range $i, $tag := .Params.tags }}{{ if $i }}, {{ end }}"{{ $tag }}"{{ end }}]{{ end }}
+  }
+  {{ end }}
+  </script>
+  
   {{ with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
